[gd_scene load_steps=13 format=2]

[ext_resource path="res://player/player_fase1/side_scroller_F1/player_plataforma.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 18.6539
height = 18.0

[sub_resource type="Animation" id=2]
resource_name = "atack_1_animation_left"

[sub_resource type="Animation" id=3]
resource_name = "atack_1_animation_right"

[sub_resource type="Animation" id=4]
resource_name = "death_animation"

[sub_resource type="Animation" id=5]
resource_name = "idlle_animation"

[sub_resource type="Animation" id=6]
resource_name = "jump_down"

[sub_resource type="Animation" id=7]
resource_name = "jump_up "

[sub_resource type="Animation" id=8]

[sub_resource type="CapsuleShape2D" id=9]
radius = 17.177
height = 33.646

[sub_resource type="CapsuleShape2D" id=10]

[node name="player_plataforma" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"player",
]]
scale = Vector2( 0.76, 1 )
shape = SubResource( 1 )

[node name="sprite_player" type="Sprite" parent="."]
modulate = Color( 0.12549, 0.0117647, 0.0117647, 1 )
scale = Vector2( 0.338125, 0.765625 )
texture = ExtResource( 2 )

[node name="animation_Player" type="AnimationPlayer" parent="."]
anims/atack_1_animation_left = SubResource( 2 )
anims/atack_1_animation_right = SubResource( 3 )
anims/death_animation = SubResource( 4 )
anims/idlle_animation = SubResource( 5 )
anims/jump_down = SubResource( 6 )
"anims/jump_up " = SubResource( 7 )
anims/walk_animation = SubResource( 8 )

[node name="area_corpo_player" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_corpo_player"]
shape = SubResource( 9 )

[node name="area_arma_player" type="Area2D" parent="." groups=[
"arma_player",
]]
editor/display_folded = true
position = Vector2( -43, -6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_arma_player"]
modulate = Color( 0.490196, 0.87451, 0.141176, 1 )
shape = SubResource( 10 )
[connection signal="animation_finished" from="animation_Player" to="." method="_on_animation_Player_animation_finished"]
[connection signal="area_entered" from="area_corpo_player" to="." method="_on_area_corpo_player_area_entered"]
[connection signal="body_entered" from="area_arma_player" to="." method="_on_area_arma_player_body_entered"]
